--- a/ATC/queue.yaml
+++ b/ATC/queue.yaml
@@ -1,4 +1,8 @@
 queue:
 # Change the refresh rate of the default queue from 5/s to 1/s.
-- name: default
+- name: replication
+  rate: 5/s
+
+- name: backend
+  target: backend-updates
   rate: 5/s
